2004-12-02  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b297

	* Change: Enhanced albumtree. Now the depth can be given.
	  This covers RFE #964594 and #1027307.

2004-12-02  Christian Mohn <h0bbel@p0ggel.org>  1.5-cvs-b296

        * Fix: Typos in admin-page.php

2004-12-02  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b295

	* Fix: "show pictures with most/less comments" were broken.
		(thanks to Marjan Laznik)

	* Change: Wording in stats and stats-wizard. (inspired by C.M.)

	* Fix: Add comments in stats now is always popup, regardless the default from config.php

	* Change: adjust layout in despam-comments, stats-wizard and find-orphans.

2004-12-01  Christian Mohn <h0bbel@p0ggel.org>  1.5-cvs-b294

        * Fix: Spelling in albums.php

2004-12-01  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b293

	* Change: Text change

2004-12-01  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b292

	* Change: Present a warning text when redirecting a user from an 
	  album/image that doesn't exist, or they don't have rights to
	  view.

2004-11-29  Chris Kelly <ckdake@users.sf.net> 1.5-cvs-b291

	* Fix: added isDebugging to a place it needed to be in util.php

2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b290

	* New: add css to define text in add_photos.php

2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b289

	* Fix: restored css for the tabs in add_photos.php

2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b288

	* Fix: typo admin_form view_photo.php

2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b287

	* Fix: CSS class.

2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b286

	* Update: CSS cleanup, minor changes.

2004-11-28  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b285

	* Fix: Used adminfrom (introduced in 1.4.3-cvs-b12) also for printservice dropdopwn.
	       This prevents unreadability in some skins.

2004-11-28  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b284

	* Change: Call by reference for blacklisted test.
