@@ -9,7 +9,7 @@
 			<?php echo _("From:") ?> <?php echo wordwrap($comment->getName(), 50, " ", 1) ?> @ <?php echo removeTags($comment->getIPNumber())?> (<?php echo $comment->getDatePosted() ?>)
 			</span>
 
-			<td"><?php
+			<td><?php
 if ($gallery->user->canWriteToAlbum($gallery->album)) {
 	//$url = doCommand("delete-comment", array("index" => $index, "comment_index" => $j), "view_comments.php", array("set_albumName" => $gallery->session->albumName));
 	//$buf = '<span class="admin"> <a href="#" onClick="javascript:' . popup($url, 1) . '">[' . _("delete comment") .']</a></span>';
